--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
       <div class="col-md-6 col-lg-4">
         <div class="card h-100 shadow-sm border-0 rounded-3 p-3 text-center">
           <i class="bi bi-currency-bitcoin fs-1 text-warning"></i>
-          <h5 class="mt-3">Trading & FinTech</h5>
+          <h5 class="mt-3">Trading & FinTechs</h5>
           <p class="small text-muted">Binance API, CCXT, Payment Gateway Integrations</p>
         </div>
       </div>
